'use strict'
const { Model } = require('sequelize')

module.exports = (sequelize, DataTypes) => {
  class Doctor extends Model {
    static associate(models) {
      // 1-1 với User (Tài khoản bác sĩ)
      Doctor.belongsTo(models.User, {
        foreignKey: 'userId',
        as: 'user',
      })

      // N-1 với Specialty
      Doctor.belongsTo(models.Specialty, {
        foreignKey: 'specialtyId',
        as: 'specialty',
      })

      // 1-N giờ làm việc
      Doctor.hasMany(models.DoctorWorkingHours, {
        foreignKey: 'doctorId',
        sourceKey: 'userId',
        as: 'workingHours',
      })

      // 1-N lịch nghỉ
      Doctor.hasMany(models.DoctorOffSchedule, {
        foreignKey: 'doctorId',
        sourceKey: 'userId',
        as: 'offSchedules',
      })

      // N-N với Patient (Bác sĩ phụ trách nhiều bệnh nhân)
      Doctor.belongsToMany(models.Patient, {
        through: models.PatientDoctor,
        foreignKey: 'doctorId',
        otherKey: 'patientId',
        as: 'patients',
      })

      // 1-N với Appointment (Lịch hẹn của bác sĩ)
      Doctor.hasMany(models.Appointment, {
        foreignKey: 'doctorId',
        as: 'appointments',
      })

      // 1-N với MedicalRecord (Các hồ sơ bệnh án do bác sĩ này tạo)
      Doctor.hasMany(models.MedicalRecord, {
        foreignKey: 'doctorId',
        as: 'medicalRecords',
      })

      // N-N với Alert (Cảnh báo được gửi đến bác sĩ)
      Doctor.belongsToMany(models.Alert, {
        through: models.AlertRecipient,
        foreignKey: 'doctorId',
        otherKey: 'alertId',
        as: 'alertRecipients',
      })
    }
  }

  Doctor.init(
    {
      userId: {
        type: DataTypes.INTEGER,
        primaryKey: true,
        allowNull: false,
      },
      specialtyId: {
        type: DataTypes.INTEGER,
        allowNull: true,
      },
      degree: {
        type: DataTypes.STRING,
      },
      experienceYears: {
        type: DataTypes.INTEGER,
      },
      bio: {
        type: DataTypes.TEXT,
      },
      address: {
        type: DataTypes.STRING,
      },
    },
    {
      sequelize,
      tableName: 'doctors',
      modelName: 'Doctor',
    },
  )

  return Doctor
}
