// ----------------------------- MySQL -----------------------------

// ======================
// ENUM DEFINITIONS
// ======================

Enum user_role {
  admin        // Quản trị hệ thống
  doctor       // Bác sĩ
  patient      // Bệnh nhân
}

Enum user_status {
  active       // Tài khoản đang hoạt động
  locked       // Tài khoản bị khóa
  incomplete      // Tài khoản mới tạo (là patient chưa điền thông tin: isProfileComplete)
}

Enum gender_type {
  male         // Nam
  female       // Nữ
  other        // Khác
}

Enum patient_doctor_role {
  primary        // Bác sĩ chính (chịu trách nhiệm)
  consultant     // Bác sĩ tư vấn / hỗ trợ
  on_call        // Bác sĩ trực / xử lý khẩn cấp
}

Enum alert_status {
  pending     // Đang chờ
  handling    // Đang có bác sĩ xử lý
  resolved    // Đã xử lý
}

Enum appointment_status {
  pending      // Chờ bác sĩ xác nhận lịch hẹn
  confirmed    // Lịch hẹn đã được xác nhận
  completed    // Buổi khám đã hoàn thành
  cancelled    // Lịch hẹn bị hủy
}

Enum appointment_type {
  online       // Lịch hẹn trực tuyến
  offline      // Lịch hẹn trực tiếp
}

Enum call_status {
  missed       // Cuộc gọi nhỡ
  rejected     // Cuộc gọi bị từ chối
  completed    // Cuộc gọi thành công
}

Enum noti_type {
  alert
  appointment
  message
  system
}

// ======================
// USERS & AUTH
// ======================

Table users {
  id int [pk, increment]
  full_name varchar [not null]                // Họ và tên
  email varchar [unique, not null]            // Email đăng nhập
  password varchar [unique, not null]         // Mật khẩu
  role user_role [default: 'patient']         // Phân quyền (admin, doctor, patient)
  avatar varchar                              // Ảnh đại diện
  phone_number varchar                        // Số điện thoại

  status user_status [default: 'incomplete']  // Trạng thái tài khoản (active, locked, incomplete)
  last_login_at timestamp                     // Thời điểm đăng nhập gần nhất

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table refresh_tokens {
  id int [pk, increment]
  token varchar [not null]
  user_id int [not null, ref: > users.id]     // User sở hữu token
  expires_at timestamp [not null]             // Thời điểm hết hạn
  is_revoked boolean [default: false]         // Token đã bị thu hồi hay chưa
  device_info varchar                         // Thông tin thiết bị đăng nhập

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// ======================
// MEDICAL ROLES
// ======================

// Chuyên khoa
Table specialties {
  id int [pk, increment]
  name varchar [not null]                  // Tên chuyên khoa (VD: Tim mạch, Nội tiết)
  description text                         // Mô tả chuyên khoa
  image_url varchar                        // Đường dẫn file
  
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// Bác sĩ
Table doctors {
  user_id int [pk, ref: - users.id]

  specialty_id int [ref: > specialties.id]    // Chuyên khoa

  degree varchar                              // Bằng cấp
  experience_years int                        // Số năm kinh nghiệm
  bio text                                    // Giới thiệu ngắn về bác sĩ
  address varchar                             // Địa chỉ bệnh viện

  created_at timestamp [default: `now()`]     
  updated_at timestamp [default: `now()`]      
}

// Giờ bác sĩ làm việc 
Table doctor_working_hours {
  id int [pk, increment]
  doctor_id int [ref: > doctors.user_id] 
  
  day_of_week int [not null, note: '0: Chủ nhật, 1: Thứ 2, ..., 6: Thứ 7']
  start_time time [not null]               // Giờ bắt đầu ca (VD: '08:00:00')
  end_time time [not null]                 // Giờ kết thúc ca (VD: '12:00:00')
  
  created_at timestamp [default: `now()`] 
  updated_at timestamp [default: `now()`]
}

// Ngày nghỉ/bận của bác sĩ
Table doctor_off_schedules {
  id int [pk, increment]
  doctor_id int [ref: > doctors.user_id]
  
  off_date date [not null]                 // Ngày nghỉ/bận (VD: '2026-03-15')
  start_time time                          // Từ mấy giờ (Để null nếu nghỉ cả ngày)
  end_time time                            // Đến mấy giờ (Để null nếu nghỉ cả ngày)
  reason varchar                           // Lý do (Họp, nghỉ phép...)
  
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// Bệnh nhân
Table patients {
  user_id int [pk, ref: - users.id]      

  date_of_birth date                      // Ngày sinh
  gender gender_type                      // Giới tính (male, female, other)
  blood_type varchar                      // Nhóm máu
  height float [note: 'cm']               // Chiều cao (cm)
  weight float [note: 'kg']               // Cân nặng (kg)
  medical_history text                    // Tiền sử bệnh
  address varchar                         // Địa chỉ
 
  created_at timestamp [default: `now()`] 
  updated_at timestamp [default: `now()`] 
}

// Bảng trung gian quan hệ bác sĩ - bệnh nhân 
Table patient_doctors {
  patient_id int [ref: > patients.user_id]  
  doctor_id int [ref: > doctors.user_id]   

  role patient_doctor_role [not null]       // Vai trò bác sĩ (primary, consultant, on_call)
  assigned_at timestamp                     // Thời điểm phân công

  primary key (patient_id, doctor_id)       // Quan hệ nhiều-nhiều
}

// Lịch hẹn
Table appointments {                        
  id int [pk, increment]                  

  patient_id int [ref: > patients.user_id]  // Bệnh nhân
  doctor_id int [ref: > doctors.user_id]    // Bác sĩ

  scheduled_at datetime [not null]          // Thời gian hẹn
  actual_ended_at timestamp [null]          // Hệ thống tự update khi bác sĩ bấm "Kết thúc ca"
  duration_minutes int [default: 30, note: '30 hoặc 60 phút']   // Dùng duration + scheduled_at để tính toán khoảng thời gian bị chiếm, hỗ trợ bệnh nhân khác đặt ca khám

  status appointment_status [default: 'pending']  // Trạng thái lịch hẹn (pending, comfirmed, completed, cancelled)
  type appointment_type [default: 'online']       // Loại lịch hẹn (online, offline)
  reason text                            // Lý do khám
  cancel_reason text                     // Lý do hủy

  created_at timestamp [default: `now()`] 
  updated_at timestamp [default: `now()`] 
}

// ======================
// DEVICES
// ======================

Table devices {
  id int [pk, increment]                                     
  name varchar                                      // Tên thiết bị
  is_online boolean                                 // online / offline

  is_assigned boolean                               // Đã kết nối với bệnh nhân nào chưa
  assigned_to int [ref: > patients.user_id, null]   // Thiết bị gắn với bệnh nhân nào

  created_at timestamp [default: `now()`]   
  updated_at timestamp [default: `now()`]   
}

// ======================
// ALERTS
// ======================

Table alerts {
  id int [pk, increment]                    

  patient_id int [not null, ref: > patients.user_id]        // Bệnh nhân liên quan
  device_id int [ref: > devices.id, not null]               // Thiết bị nào

  type varchar                                  // Loại chỉ số (bpm, spo2, ecg)
  value float                                   // Giá trị đo được
  message varchar                               // Nội dung cảnh báo

  trigger_timestamp timestamp [not null]        // Thời điểm đúng giây đầu tiên phát hiện bất thường (Dùng để liên kết với MongoDB để trích dữ liệu biểu đồ)
  
  // Xử lý logic theo đợt (Episode)
  last_detected_at timestamp                    // Cập nhật liên tục nếu vẫn còn bất thường
  anomaly_count int [default: 1]                // Đếm số lượng gói tin bất thường trong đợt này

  status alert_status [default: 'pending']            // Trạng thái (pending, handling, resolved)
  
  handled_by int [ref: > doctors.user_id, null]       // Có bác sĩ đã bấm "Tiếp nhận" 
  resolved_at timestamp                               // Thời điểm xử lý xong

  created_at timestamp [default: `now()`]  
  updated_at timestamp [default: `now()`]  
}

// Bảng trung gian cảnh báo cho bác sĩ nào
Table alert_recipients {                        
  alert_id int [ref: > alerts.id, not null]                       // Cảnh báo
  doctor_id int [ref: > doctors.user_id, not null]                // Bác sĩ nhận cảnh báo từ bệnh nhân

  is_read boolean [default: false]                      // Xem chưa
  read_at timestamp                                     // Thời điểm xem  

  delivered_at timestamp [not null]                     // Thời điểm cảnh báo 

  primary key (alert_id, doctor_id)
}

// ======================
// MEDICAL DATA
// ======================

// Hồ sơ khám bệnh 
Table medical_records {                     
  id int [pk, increment]                 

  appointment_id int [ref: > appointments.id]   // Ca khám nào
  alert_id int [ref: > alerts.id]               // Cảnh báo nào
  patient_id int [ref: > patients.user_id]      // Bệnh nhân
  doctor_id int [ref: > doctors.user_id]        // Bác sĩ khám

  symptoms text                // Triệu chứng
  diagnosis text               // Chẩn đoán

  treatment_plan text          // Hướng điều trị
  prescription json            // Đơn thuốc
  notes text                   // Ghi chú thêm

  created_at timestamp [default: `now()`] 
  updated_at timestamp [default: `now()`] 
}

// File đính kèm
Table medical_attachments {             
  id int [pk, increment]                  

  medical_record_id int [ref: > medical_records.id, null]   // Hồ sơ liên quan
  alert_id int [ref: > alerts.id, null]               // Cảnh báo liên quan

  file_name varchar                     // Tên file
  file_url varchar                      // Đường dẫn file
  file_type varchar                     // Loại file: image | pdf

  category enum('auto_ecg_report', 'other') // Hiện tại chỉ có 2 loại: auto_ecg_report và other để phân biệt tệp đính kèm là từ báo cáo AutoECG hay từ người dùng upload, có thể phát triển trong tương lai
  uploaded_at timestamp                 // Thời điểm upload
}

// ======================
// TELEMEDICINE
// ======================

// Lịch sử cuộc gọi
Table call_logs {
  id int [pk, increment]                   

  caller_id int [ref: > users.id]           // Người gọi
  receiver_id int [ref: > users.id]         // Người nhận

  duration_seconds int                      // Thời lượng cuộc gọi (giây)

  status call_status                        // Trạng thái cuộc gọi (missed, rejected, completed)

  created_at timestamp [default: `now()`] 
}

// Thông báo
Table notifications {
  id int [pk, increment]

  user_id int [not null, ref: > users.id]     // Thông báo cho ai

  type noti_type [not null]         // Loại thông báo (alert, appointment, message)

  title varchar                     // Tiêu đề
  content text                      // Nội dung 

  reference_id varchar              // Id liên quan (alert_id, appointment_id, message_id)

  sender_id int [ref: > users.id, null]       // doctor_id, patient_id khi nhận chat, appointment

  is_read boolean [default: false]
  read_at timestamp

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [null]
}

// ----------------------------- MongoDB -----------------------------
// // Lưu trữ gói ECG thu được từ thiết bị
// const ECGRawSchema = new mongoose.Schema(
//   {
//     timestamp: { type: Date, required: true },
//     metadata: {
//       patient_id: { type: Number, required: true },
//       device_id: { type: Number, required: true },
//     },
//     ecg_packet: { type: [Number], required: true }, // Lưu trực tiếp mảng 187 điểm của 1 gói tin thu được tại thời điểm đó
//
//     class_inference: {
//       type: String,
//       enum: ['N', 'S', 'V', 'F', 'Q'],
//       default: null,
//     }, // 5 class theo MIT-BIH
//     inference_ready: {
//       type: Boolean,
//       default: true,
//     }, // false = warm-up / chưa đủ 5 beat
//     inference_latency_ms: {
//       type: Number,
//       default: null,
//     },
//     inference_confidence: {
//       type: Number,
//       default: null,
//     },
//     is_abnormal: {
//       type: Boolean,
//       default: false,
//     },
//   },
//   {
//     timeseries: {
//       timeField: 'timestamp',
//       metaField: 'metadata',
//       granularity: 'seconds', // Vì thiết bị bắn liên tục theo từng giây
//     },
//     expireAfterSeconds: 604800, // Tự động xóa sau 7 ngày (TTL Index)
//   },
// )
//
// // Lưu trữ đoạn ECG bất thường
// const ECGAbnormalStripSchema = new mongoose.Schema(
//   {
//     patient_id: { type: Number, required: true, index: true },
//     alert_id: { type: Number, required: true, index: true },
//
//     // Trục thời gian của đoạn cắt (VD: 10 giây)
//     strip_type: {
//       type: String,
//       enum: ['trigger', 'last_detected'],
//       required: true,
//     }, // Mỗi alert sẽ có 2 document riêng: trigger và last_detected
//     reference_timestamp: { type: Date, required: true }, // Thời điểm chính xác xảy ra cảnh báo
//     window_start: { type: Date, required: true }, // Thời điểm bắt đầu dải sóng (trigger - 5s)
//     window_end: { type: Date, required: true }, // Thời điểm kết thúc dải sóng (trigger + 5s)
//     duration_seconds: { type: Number, required: true }, // Mặc định là 10 (giây)
//
//     // Dữ liệu sóng đã được flatten thành 1 mảng duy nhất (~1870 phần tử)
//     ecg_data: { type: [Number], required: true },
//
//     // Các class bất thường đã xuất hiện trong 10 giây này
//     detected_classes: {
//       type: [String],
//       enum: ['S', 'V', 'F', 'Q'],
//       default: [],
//     },
//   },
//   {
//     timestamps: { createdAt: 'created_at', updatedAt: false },
//   },
// )
//
// // Tin nhắn
// const MessageSchema = new mongoose.Schema(
//   {
//     conversation_id: {
//       type: mongoose.Schema.Types.ObjectId,
//       ref: 'Conversation',
//       required: true,
//     },
//     sender_id: {
//       type: mongoose.Schema.Types.Number, // user_id từ SQL
//       required: true,
//     },
//     type: {
//       type: String,
//       enum: ['text', 'image', 'file', 'call', 'system_alert'],
//       default: 'text',
//     },
//     content: {
//       text: { type: String },
//
//       // Dùng cho type 'image' hoặc 'file'
//       file_url: { type: String },
//       file_name: { type: String },
//
//       // Dùng cho type 'call'
//       call_id: { type: Number },
//       call_status: { type: String, enum: ['missed', 'rejected', 'completed'] },
//       call_duration: { type: Number }, 
//     },
//     status: {
//       type: String,
//       enum: ['sent', 'read'],
//       default: 'sent',
//     },
//   },
//   {
//     timestamps: { createdAt: 'created_at', updatedAt: false },
//   },
// )
//
// // Cuộc hội thoại
// const ConversationSchema = new mongoose.Schema(
//   {
//     // Mảng chứa user_id (từ SQL) của Bác sĩ và Bệnh nhân
//     participants: {
//       type: [Number],
//       required: true,
//       validate: {
//         validator: (v) => v.length === 2,
//         message: 'Conversation phải có đúng 2 participants'
//       }
//     },
//
//     // Nhúng trực tiếp tin nhắn cuối để hiển thị preview
//     last_message: {
//       message_id: {
//         type: mongoose.Schema.Types.ObjectId,
//         ref: 'Message'
//       },
//       sender_id: { type: mongoose.Schema.Types.Mixed }, // Number or 'system'
//       type: {
//         type: String,
//         enum: ['text', 'image', 'file', 'system_alert']
//       },
//       content: { type: String },
//       created_at: { type: Date }
//     },
//
//     // Đếm tin nhắn chưa đọc của từng người – key là user_id (string), value là số đếm
//     unread_counts: {
//       type: Map,
//       of: Number,
//       default: {}
//     }
//   },
//   {
//     timestamps: { createdAt: 'created_at', updatedAt: 'updated_at' }
//   }
// )